@@ -1294,6 +1294,7 @@ int client_config_line_proc(struct mosq_config *cfg, int pub_or_sub, int argc, c
 						cfg->session_expiry_interval = UINT32_MAX;
 					}
 				}
+				cfg->protocol_version = MQTT_PROTOCOL_V5;
 			}
 			i++;
 		}else{
