@@ -731,7 +731,8 @@
 				<term><option>-x</option></term>
 				<listitem>
 					<para>Set the session-expiry-interval property on the CONNECT packet.
-						Applies to MQTT v5 clients only. Set to 0-4294967294 to specify
+						If you use this option, the client will be set to be an MQTT v5
+						client. Set to 0-4294967294 to specify
 						the session will expire in that many seconds after the client
 						disconnects, or use -1, 4294967295, or ∞ for a session that does
 						not expire. Defaults to -1 if -c is also given, or 0 if -c not
